style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');

@font-face {
  font-family: 'Cat Paw';
  src: url('assets/cat-paw.ttf');
}

h1, h2, h3, h4, h5, h6, p {
  margin: 0px;
  padding: 0px;
}

h1 { font-size: 128px; }
h2 { font-size: 64px; }
h3 { font-size: 48px; }
h4 { font-size: 32px; }
h5 { font-size: 24px; }
h6 { font-size: 20px; }

a {
  color: var(--foreground);
  text-decoration-color: var(--background-pink);
  text-decoration-thickness: 2px;
  transition: text-decoration .15s, color .15s;
}
a:hover {
  text-decoration-color: var(--background-blue);
  color: var(--blue);
}

.bold {
  font-weight: 800;
}

.vertical {
  display: flex;
  flex-direction: column;
}

.horizontal {
  display: flex;
  flex-direction: row;
}

.paws {
  font-family: 'Cat Paw';
  font-weight: normal;
}

.feather {
  color: var(--background-pink);
}

svg.inline,
img.inline {
  height: 1em;
  vertical-align: -0.125em;
}

html {
  --foreground: #FFFFFF;

  --pink: #F5A9B8;
  --accent-pink: #F291A5;
  --background-pink: #FBDAE0;

  --blue: #5BCEFA;
  --accent-blue: #079EDA;
  --background-blue: #D8F3FE;

  margin: 0px;
  padding: 0px;
}

body {
  margin: 0px;
  min-height: 100vh;
  padding: 64px;
  box-sizing: border-box;
  
  background-color: var(--background-pink);
  color: var(--foreground);
  font-family: 'Nunito';
  font-size: 24px;
  font-weight: 600;
}

main {
  max-width: 1280px;
  margin: 0px auto;
  gap: 32px;
}

.box {
  background-color: var(--pink);
  border: 4px solid var(--accent-pink);
  border-radius: 16px;
  padding: 32px;
  box-sizing: border-box;
  flex-grow: 1;
}


#title {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}


#about {
  gap: 32px;
}

#info {
  gap: 4px;
  white-space: nowrap;
}

#intro {
  max-width: 50%;
}

#socials a svg {
  color: var(--foreground);
  transition: color .15s;
}
#socials a:hover svg {
  color: var(--blue);
}


footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 4px;
  background-color: var(--pink);
  border-top: 4px solid var(--accent-pink);
}

#credits {
  text-align: center;
  font-size: 20px;
}

